<resources>
    <string name="app_name">Kid Mot</string>

    <string name="button_add">Add Point</string>
    <string name="button_delete">Delete Point</string>
    <string name="button_reset">Reset Points</string>

    <string name="button_test">Test</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_save">Save</string>
    <string name="button_load">Load</string>
    <string name="preference_file_key">com.mot.android.myapplication.preference_file_key</string>
    <string name="load_message">Loaded Message</string>

    <string-array name="user_array">
        <item>Veer</item>
        <item>Isha</item>
    </string-array>



</resources>
